Ejercicios En Clase y Taquería

--- a/02 - HTML/01 - EJERCICIOS/practica1.html
+++ b/02 - HTML/01 - EJERCICIOS/practica1.html
@@ -9,14 +9,66 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <!-- Headings-->
     <h1>Bienvenidos Explorers</h1>
     <h2>Práctica #1 de HTML</h2>
 
+    <!-- Párrafos-->
     <p>Buen día soy un párrafo</p>
-    <a href="https://github.com/jaimechacon11" target="blank">Github - Jaime Chacón</a>
-    <br>
-    <a href="https://www.nfl.com" target="blank"><img src="https://i.imgur.com/LxULNvJ.jpeg" alt="Mahomes"></a>
-    <br>
-    <img src="https://i.imgur.com/LxULNvJ.jpeg" alt="Mahomes">
+
+    <!-- Links -->
+    <a href="https://github.com/jaimechacon11" target="blank"
+      >Github - Jaime Chacón</a
+    >
+    <br />
+    <a href="https://www.nfl.com" target="blank"
+      ><img src="https://i.imgur.com/LxULNvJ.jpeg" alt="Mahomes"
+    /></a>
+    <br />
+
+    <!-- Imágenes-->
+    <img src="https://i.imgur.com/LxULNvJ.jpeg" alt="Mahomes" />
+
+    <!-- Tablas-->
+    <table>
+      <tr> <!-- FILAS DE LA TABLA-->
+        <th>Compañía</th> <!-- TITULOS DE LA TABLA-->
+        <th>Contacto</th>
+        <th>País</th>
+      </tr>
+      <tr>
+        <td>Microsoft</td> <!-- DATOS DE LA TABLA-->
+        <td>584589</td>
+        <td>México</td>
+      </tr>
+      <tr>
+        <td>Microsoft</td> <!-- DATOS DE LA TABLA-->
+        <td>584589</td>
+        <td>México</td>
+      </tr>
+    </table>
+
+    <!-- Listas -->
+    <ul>
+      <li>Café</li>
+      <li>Arroz</li>
+      <li>Leche</li>
+      <li>Huevos</li>
+    </ul>
+    
+    <ol>
+      <li>Alumno1</li>
+      <li>Alumno2</li>
+      <li>Alumno3</li>
+      <li>Alumno4</li>
+    </ol>
+
+    <dl>
+      <dt>Enchiladas</dt>
+      <dd> - Tortilla Frita con salsa rellena de pollo</dd>
+      <dt>Molletes</dt>
+      <dd> - Bolillo con frijoles y queso</dd>
+    </dl>
+
   </body>
 </html>
