Práctica CSS Completa

--- a/03 - CSS/02 - PRACTICAS/vaccination/vaccination.html
+++ b/03 - CSS/02 - PRACTICAS/vaccination/vaccination.html
@@ -50,8 +50,42 @@
             />
             <p class="pch">Selected Vaccines</p>
           </div>
+          <div class="calendario">
+            <div class="schedule">
+              <img class="lc" src="./assets/logos/p1.png"
+              alt="schedule"/>
+              <p class="tc">Schedule your vaccinations</p>
+            </div>
+
+            <div class="schedule2">
+              <div class="location">
+                <img class="lo" src="./assets/logos/p11.png"
+                alt="schedule"/>
+                <div>
+                  <p class="to">Location</p>
+                  <p class="tc2">Jakarta Utara</p>
+                </div>
+              </div>
+              <div class="location">
+                <img class="lo" src="./assets/logos/p11.png"
+                alt="schedule"/>
+                <div>
+                  <p class="to">Date</p>
+                  <p class="tc2">08 July 2021</p>
+                </div>
+              </div>
+              <div class="location">
+                <img class="lo" src="./assets/logos/p11.png"
+                alt="schedule"/>
+                <div>
+                  <p class="to">Vaccine Type</p>
+                  <p class="tc2">Moderna</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        </article>
+      </article>
 
       <article class="virus2">
         <div class="nursed">
